# bevy-jam-3

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: box.level.ron  jump.cpt  pixel-cat.aseprite  settings.physics.ron
assets/levels/: 3_die.level.ron  5_floating_boxes.level.ron  box.level.ron  cross.level.ron  fall_for_it.level.ron  learn_to_move.level.ron  levels.ldtk  stairs.level.ron  upsidedown-u.level.ron
assets/sfx/: death.cpt
src/: collisions.rs  constants.rs  game_state.rs  goals.rs  ground.rs  level.rs  main.rs  physics.rs  player.rs  sfx.rs  start_menu.rs  win_screen.rs
