[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cats_always_land_on_their_feet"
version = "0.1.0"

[dependencies]
bevy = "0.10"
bevy_common_assets = {version = "0.6.0", features = ["ron", "serde_ron"]}
bevy_ecs_ldtk = "0.6.0"
bevy_rapier2d = {version = "0.21.0", features = ["debug-render-2d"]}
bevy_turborand = "0.5.0"
leafwing-input-manager = "0.9.1"
serde = { version = "1" }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
