[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cats_always_land_on_their_feet"
version = "0.1.0"

[dependencies]
bevy = "0.15"
bevy_common_assets = {version = "0.12.0", features = ["ron"]}
bevy_ecs_ldtk = "0.11.0"
bevy_turborand = "0.10.0"
leafwing-input-manager = "0.16"
serde = { version = "1" }
bevy_mod_debugdump = "0.12.0"
bevy-inspector-egui = "0.30"
bevy_egui = "0.33"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
