[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cats_always_land_on_their_feet"
version = "0.1.0"

[dependencies]
bevy = "0.16"
bevy_common_assets = {version = "0.13.0", features = ["ron"]}
bevy_ecs_ldtk = { git = "https://github.com/hymm/bevy_ecs_ldtk", branch = "bevy-16" }
bevy_turborand = "0.11.0"
leafwing-input-manager = "0.17"
serde = { version = "1" }
bevy_mod_debugdump = "0.13.0"
bevy-inspector-egui = "0.31"
bevy_egui = "0.34.1"
bevy_aseprite_ultra = "0.6.1"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
